[tool.poetry]
name = "wyatts-awesome-lib"
version = "0.1.0"
description = "a cool lib that wyatt made"
authors = ["Wyatt Queirolo <wyatt.queirolo@lendbuzz.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
